# aurora

./: .dockerignore  .dockerignore.process  .env.example  .env.file  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  AMBIENT_TRANSCRIPTION_SUMMARY.md  CHANGELOG.md  COMMIT_PLAN.md  DATABASE_INTEGRATION_COMPLETE.md  Dockerfile  Dockerfile.process  LICENSE  MULTI_TENANCY_ROADMAP.md  Makefile  README.process-mode.md  SECURITY.md  Tiltfile  config.json  cz.toml  demo_ui_database.py  docker-compose.process.yml  docker-compose.process.yml.example  docker-compose.tilt.yml  docker-compose.yml  file:memdb1?mode=memory&cache=shared  main.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  pytest.ini  readme.md  requirements-dev.txt  requirements-docker.txt  requirements-lint.txt  requirements-runtime.txt  requirements-test.txt  (+8 more)
.agent/rules/: project-rule.md
.cursor/: mcp.json  worktrees.json
.cursor/plans/: config-service-migration-plan-959f6486.plan.md  config-service-migration-plan.plan.md  dependency-restructure.plan.md  docker-hub-release.plan.md  master-plan.plan.md  migration-pan.plan.md  tilt_process-mode_dev_e99d8301.plan.md
.cursor/rules/: conda-environment.mdc
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/scripts/: ios_app_intent_smoke.swift  ios_entrypoint_payload_smoke.swift
.github/workflows/: README.md  docker-build.yml  e2e.yml  frontend-sdk.yml  lint.yml  performance.yml  (+17 more)
.omx/: ROADMAP.md
app/: __init__.py  __main__.py
apps/aurora-tauri/src-tauri/: Cargo.toml  Info.ios.plist  build.rs  tauri.conf.json  tauri.ios.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
apps/aurora-tauri/src-tauri/android/: README.md
apps/aurora-tauri/src-tauri/android/aurora-native-plugin/: build.gradle.kts  consumer-rules.pro
apps/aurora-tauri/src-tauri/android/aurora-native-plugin/src/main/: AndroidManifest.xml
apps/aurora-tauri/src-tauri/android/aurora-native-plugin/src/main/java/dev/aurora/tauri/nativeplugin/: AuroraAssistActivity.kt  AuroraEntrypointActivity.kt  AuroraEntrypointStore.kt  AuroraNativePlugin.kt  AuroraQuickSettingsTileService.kt  AuroraVoiceForegroundService.kt  AuroraVoiceInteractionService.kt  AuroraVoiceInteractionSessionService.kt  AuroraWidgetProvider.kt
apps/aurora-tauri/src-tauri/android/aurora-native-plugin/src/main/res/drawable/: ic_aurora_entrypoint.xml
apps/aurora-tauri/src-tauri/android/aurora-native-plugin/src/main/res/layout/: aurora_widget.xml
apps/aurora-tauri/src-tauri/android/aurora-native-plugin/src/main/res/values/: strings.xml
apps/aurora-tauri/src-tauri/android/aurora-native-plugin/src/main/res/xml/: aurora_shortcuts.xml  aurora_voice_interaction_service.xml  aurora_widget_info.xml
apps/aurora-tauri/src-tauri/capabilities/: aurora-desktop-updater.json  aurora-ios-baseline.json  aurora-main.json
apps/aurora-tauri/src-tauri/ios/: Package.swift  preflight.json  release-gate.json
apps/aurora-tauri/src-tauri/ios/AuroraNativePlugin/: Package.swift  README.md
apps/aurora-tauri/src-tauri/ios/AuroraNativePlugin/Sources/AuroraNativePlugin/: AuroraAppIntents.swift  AuroraEntrypointPayloads.swift  AuroraNativePlugin.swift
apps/aurora-tauri/src-tauri/ios/Sources/AuroraNativePlugin/: AuroraNativePlugin.swift
apps/aurora-tauri/src-tauri/ios/aurora-native-plugin/: Package.swift  README.md
apps/aurora-tauri/src-tauri/ios/aurora-native-plugin/Sources/AuroraNativePlugin/: AuroraNativePlugin.swift
apps/aurora-tauri/src-tauri/permissions/: aurora-android-native-plugin.toml  aurora-audio-bridge.toml  aurora-command.toml  aurora-dialogs.toml  aurora-ios-native-plugin.toml  aurora-ios-voice.toml  aurora-local-file.toml  aurora-log-tail.toml  aurora-native-capability-manifest.toml  aurora-native-permissions.toml  aurora-notifications.toml  aurora-request.toml  aurora-secure-file-handle.toml  aurora-secure-storage.toml  aurora-shutdown.toml  aurora-sidecar-session.toml  aurora-sidecar-start.toml  aurora-sidecar-status.toml  aurora-sidecar-stop.toml  aurora-subscribe.toml  aurora-tray.toml
apps/aurora-tauri/src-tauri/src/: lib.rs  main.rs
docs/: ACCESSIBILITY_RESPONSIVE_VISUAL_TESTS.md  AMBIENT_TRANSCRIPTION.md  API_AND_CONTRACTS.md  ARCHITECTURE.md  AUTH_AND_PERMISSIONS.md  BACKUP_SERVICE.md  CHROMA_INTEGRATION.md  CI_CD.md  CONFIG_SERVICE_PATTERN.md  CONTRIBUTE.md  DATA_SHARING_POLICY.md  DEPENDENCIES.md  DEPENDENCY_RESTRUCTURE_SUMMARY.md  DOCS_INDEX.md  DOC_MAINTENANCE.md  FEATURE_MATRIX.md  FRONTEND_AND_UI_ARCHITECTURE.md  GATEWAY.md  INSTALL.md  LINT_GUIDE.md  MCP_INTEGRATION.md  MESH_GAP_E2E_HARNESS.md  MESH_PAIRING_FIX_PLAN.md  MESSAGING_ARCHITECTURE.md  MULTI_MODE_E2E_RELEASE_RUNBOOK.md  PEER_PAIRING_FLOW.md  PER-269-tauri-ui-production-readiness-report.md  PER-273-production-ui-contract-hardening.md  PERFORMANCE_OFFLINE_RESILIENCE_TESTS.md  PRODUCTION_UI_CONTRACTS.md  QA-004-accessibility-responsive-visual-runbook.md  QA-005_PERFORMANCE_OFFLINE_RESILIENCE_RUNBOOK.md  RELEASE_PACKAGING_OPERATOR_RUNBOOK.md  SDK_BACKEND_CONFORMANCE_CI.md  SECURITY_PRIVACY_REGRESSION_RUNBOOK.md  SERVICE_METHODS_REFERENCE.md  TAURI_DESKTOP_BUILD.md  TECHSTACK.md  TESTING_PROCESS_MODE.md  TILT.md  (+5 more)
examples/: ambient_transcription_example.py  ambient_transcription_readme.md
issues/: 6.md
modules/: chatbot_graph.py  tts.py
scripts/: __init__.py  analyze-dependencies.py  analyze-transitive-deps.py  build.py  check_docs.py  check_sdk_backend_conformance.py  compose-docker.sh  config_to_docker_env.py  config_updater.py  docker-compose  docker-process-mode.sh  generate_backend_inventory.py  generate_config_artifacts.py  lint-staged.sh  mesh_gap_e2e_harness.py  multi_mode_e2e_matrix.py  release_packaging_operator_gate.py  run_processes.py  security_privacy_regression_gate.py  tilt-build-all.sh  tilt-check-resources.sh  tilt-compose-rebuild.sh  tilt-set-service-log-level.sh  transport_parity_gate.py  ui_release_preflight.py  update_docs.py  wheel_installer.py
tests/: AGENTS.md  README.md  __init__.py  conftest.py  test_scheduler.db
voice_models/: README.md
(+887 files in other folders)
