[package]
name = "aurora-tauri"
version = "0.1.0"
description = "Official Tauri 2 desktop shell for Aurora."
authors = ["Aurora contributors"]
license = "MIT"
repository = "https://github.com/joaojhgs/aurora"
edition = "2021"
rust-version = "1.77"
default-run = "aurora-tauri"

[lib]
name = "aurora_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
getrandom = "0.2"
keyring = { version = "3.6", default-features = false, features = ["apple-native", "windows-native", "linux-native"] }
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.9.5", features = [] }
thiserror = "2.0"
url = "2.5"
